--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--<link rel="stylesheet" href="./css/reset.css">-->
     <link rel="stylesheet" href="./css/estilo.css">
-    <title>Mis Tareas</title>
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="img/icon_64.png" type="image/png">
+    <title>Lista de tareas</title>
 </head>
 
 <body>
