--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!--<link rel="stylesheet" href="./css/reset.css">-->
     <link rel="stylesheet" href="./css/estilo.css">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="img/icon_64.png" type="image/png">
@@ -21,7 +20,7 @@
             <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top ">
                 <!--fixed-top-->
                 <div class="container-fluid">
-                    <a class="navbar-brand marca" href="#">Mis Tareas</a>
+                    <a class="navbar-brand marca" href="#">Lista de tareas</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasScrollingCrearTarea" aria-controls="offcanvasScrolling">
                         <span class="navbar-toggler-icon"></span>
