--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/estilo.css">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="img/icon_64.png" type="image/png">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <title>Lista de tareas</title>
 </head>
