--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <li class="nav-item m-2">
                             <button id="btn-config-off" class="btn-play btn-leer btn-menu" aria-current="page"
                                 href="#"><img class="m-0 p-0 img-btn" src="./img/gear_icon.png"></button>
-                            <p class=" p-0 texto-btn-menu">Configuracion</p>
+                            <p class=" p-0 texto-btn-menu">Configuración</p>
                         </li>
                     </ul>
                 </div>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="mb-3 p-2">
                     <input required autocomplete="off" type="text" class="form-control input-titulo" id="input-titulo"
-                        placeholder="Ingrese un titulo">
+                        placeholder="Ingrese un título">
                 </div>
                 <div class="mb-3 p-2">
                     <textarea required autocomplete="off" class="form-control input-descripcion" id="input-descripcion"
@@ -149,7 +149,7 @@
             <dialog class="container-fluid modal-crear modal-general animate__animated animate__slideInUp"
                 id="modal-configuracion">
                 <div class="mb-3">
-                    <h4 class="text-center">Configuracion</h4>
+                    <h4 class="text-center">Configuración</h4>
                     <div class="mb-3 contenedor-idiomas-rango">
                         <div class="mb-3 contenedor-idiomas">
                             <h6 class="text-center">Seleccionar Idioma</h6>
